changed style to fix scrollbar issue

--- a/spatial_task_switching_with_cued_task_switching__fmri/style.css
+++ b/spatial_task_switching_with_cued_task_switching__fmri/style.css
@@ -134,7 +134,7 @@ img.center {
 /*******************************************************/
 .quad_box {
  width: 85vw;
- height: 85vh;
+ height: 90vh;
  position:absolute;
  top:50%;
  left:50%;
@@ -145,8 +145,8 @@ img.center {
 }
 
 .decision-top-left {
- width: 40vw;
- height: 40vh;
+ width: 35vw;
+ height: 35vh;
  position:absolute;
  top:25%;
  left:25%;
@@ -157,8 +157,8 @@ img.center {
 }
 
 .decision-bottom-left {
- width: 40vw;
- height: 40vh;
+ width: 35vw;
+ height: 35vh;
  position:absolute;
  top:75%;
  left:25%;
@@ -169,8 +169,8 @@ img.center {
 }
 
 .decision-top-right {
- height: 40vh;
- width: 40vw;
+ height: 35vh;
+ width: 35vw;
  position:absolute;
  top:25%;
  left:75%;
@@ -181,8 +181,8 @@ img.center {
 }
 
 .decision-bottom-right {
- height: 40vh;
- width: 40vw;
+ height: 35vh;
+ width: 35vw;
  position:absolute;
  top:75%;
  left:75%;
